# t-qworship-plugin

./: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  ndi_streamer.rs
